# ams-coding-bootcamp

./: .gitignore  README.md  brandon_slides.html  brandon_slides.md  hafiz_slides.md  pyproject.toml
.github/workflows/: test.yaml
slides/: AMS_bootcamp_2025.md  Part_I.md  Part_II.html  Part_II.md  Part_I_slides.md  brandon_slides.html  brandon_slides.md  hafiz_slides.md  slides.html  slides.md
src/: bash_intro.sh  format_lint_example.py  format_lint_example_fixed.py  formatter_example.py  intro.py  notebook_example.ipynb  notebook_example.py
tests/: test_.py  test_examples.py
